{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 345,
  "lineage": "2650a2b4-536a-eabd-f013-87fa48696824",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "hub-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/networkInterfaces/az104-hub-nic",
            "internal_domain_name_suffix": "le02c0k3jitu5px2e5mfwsmgbc.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "az104-hub",
                "primary": true,
                "private_ip_address": "10.0.0.68",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/az104-hub-vnet/subnets/mgmt"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-2A-47-25",
            "name": "az104-hub-nic",
            "private_ip_address": "10.0.0.68",
            "private_ip_addresses": [
              "10.0.0.68"
            ],
            "resource_group_name": "hub-vnet-rg",
            "virtual_machine_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/hub-vnet-rg/providers/Microsoft.Compute/virtualMachines/az104-hub-vm"
          },
          "dependencies": [
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_subnet.hub-mgmt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "hub-nva-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/hub-nva-az104-rg/providers/Microsoft.Network/networkInterfaces/hub-nva-az104-nic",
            "internal_domain_name_suffix": "le02c0k3jitu5px2e5mfwsmgbc.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "hub-nva-az104",
                "primary": true,
                "private_ip_address": "10.0.0.36",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/az104-hub-vnet/subnets/dmz"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-C2-6B-93",
            "name": "hub-nva-az104-nic",
            "private_ip_address": "10.0.0.36",
            "private_ip_addresses": [
              "10.0.0.36"
            ],
            "resource_group_name": "hub-nva-az104-rg",
            "virtual_machine_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/hub-nva-az104-rg/providers/Microsoft.Compute/virtualMachines/hub-nva-az104-vm"
          },
          "dependencies": [
            "azurerm_resource_group.hub-nva-rg",
            "azurerm_subnet.hub-dmz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "onprem-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/networkInterfaces/az104-onprem-nic",
            "internal_domain_name_suffix": "2cj3rxmokbjejlsgnzjz5dk45f.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "az104-onprem",
                "primary": true,
                "private_ip_address": "192.168.1.132",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/publicIPAddresses/az104-onprem-pip",
                "subnet_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/virtualNetworks/onprem-vnet/subnets/mgmt"
              }
            ],
            "location": "northeurope",
            "mac_address": "00-0D-3A-DA-58-52",
            "name": "az104-onprem-nic",
            "private_ip_address": "192.168.1.132",
            "private_ip_addresses": [
              "192.168.1.132"
            ],
            "resource_group_name": "onprem-vnet-rg",
            "virtual_machine_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/onprem-vnet-rg/providers/Microsoft.Compute/virtualMachines/az104-onprem-vm"
          },
          "dependencies": [
            "azurerm_public_ip.onprem-pip",
            "azurerm_resource_group.onprem-vnet-rg",
            "azurerm_subnet.onprem-mgmt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "spoke1-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/networkInterfaces/spoke1-az104-nic",
            "internal_domain_name_suffix": "zdwoo4iv4nyunfvaa0ho55pi2c.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "spoke1-az104",
                "primary": true,
                "private_ip_address": "10.1.0.68",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/mgmt"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-BC-53-59",
            "name": "spoke1-az104-nic",
            "private_ip_address": "10.1.0.68",
            "private_ip_addresses": [
              "10.1.0.68"
            ],
            "resource_group_name": "spoke1-vnet-rg",
            "virtual_machine_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Compute/virtualMachines/spoke1-az104-vm"
          },
          "dependencies": [
            "azurerm_resource_group.spoke1-vnet-rg",
            "azurerm_subnet.spoke1-mgmt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "spoke2-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/networkInterfaces/spoke2-az104-nic",
            "internal_domain_name_suffix": "xbwyd0wku3heleto04hqqmm53b.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "spoke2-az104",
                "primary": true,
                "private_ip_address": "10.2.0.68",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-az104-vnet/subnets/mgmt"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-BD-8E-04",
            "name": "spoke2-az104-nic",
            "private_ip_address": "10.2.0.68",
            "private_ip_addresses": [
              "10.2.0.68"
            ],
            "resource_group_name": "spoke2-vnet-rg",
            "virtual_machine_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Compute/virtualMachines/spoke2-az104-vm"
          },
          "dependencies": [
            "azurerm_resource_group.spoke2-vnet-rg",
            "azurerm_subnet.spoke2-mgmt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "onprem-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/networkSecurityGroups/az104-onprem-nsg",
            "location": "northeurope",
            "name": "az104-onprem-nsg",
            "resource_group_name": "onprem-vnet-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "88.120.30.227",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "env": "az104-onprem"
            },
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.onprem-vnet-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "hub-vpn-gateway1-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/publicIPAddresses/hub-vpn-gateway1-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.174.66.236",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "hub-vpn-gateway1-pip",
            "resource_group_name": "hub-vnet-rg",
            "sku": "Basic",
            "tags": {
              "env": "az104-onprem"
            }
          },
          "dependencies": [
            "azurerm_resource_group.hub-vnet-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "onprem-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/publicIPAddresses/az104-onprem-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.79.156.190",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "az104-onprem-pip",
            "resource_group_name": "onprem-vnet-rg",
            "sku": "Basic",
            "tags": {
              "env": "az104-onprem"
            }
          },
          "dependencies": [
            "azurerm_resource_group.onprem-vnet-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "onprem-vpn-gateway1-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/publicIPAddresses/az104-onprem-vpn-gateway1-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.69.250.28",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "az104-onprem-vpn-gateway1-pip",
            "resource_group_name": "onprem-vnet-rg",
            "sku": "Basic",
            "tags": {
              "env": "az104-onprem"
            }
          },
          "dependencies": [
            "azurerm_resource_group.onprem-vnet-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "hub-gateway-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/hub-nva-az104-rg/providers/Microsoft.Network/routeTables/hub-gateway-rt",
            "location": "westeurope",
            "name": "hub-gateway-rt",
            "resource_group_name": "hub-nva-az104-rg",
            "route": [
              {
                "address_prefix": "10.0.0.0/16",
                "name": "toHub",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              },
              {
                "address_prefix": "10.1.0.0/16",
                "name": "toSpoke1",
                "next_hop_in_ip_address": "10.0.0.36",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "10.2.0.0/16",
                "name": "toSpoke2",
                "next_hop_in_ip_address": "10.0.0.36",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/az104-hub-vnet/subnets/GatewaySubnet"
            ],
            "tags": {
              "env": "az104-onprem",
              "environment": "hub-nva-az104"
            },
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.hub-nva-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "spoke1-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/hub-nva-az104-rg/providers/Microsoft.Network/routeTables/spoke1-rt",
            "location": "westeurope",
            "name": "spoke1-rt",
            "resource_group_name": "hub-nva-az104-rg",
            "route": [
              {
                "address_prefix": "10.2.0.0/16",
                "name": "toSpoke2",
                "next_hop_in_ip_address": "10.0.0.36",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "0.0.0.0/0",
                "name": "default",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              }
            ],
            "subnets": [
              "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/mgmt",
              "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/workload"
            ],
            "tags": {
              "env": "az104-onprem"
            },
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.hub-nva-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "spoke2-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/hub-nva-az104-rg/providers/Microsoft.Network/routeTables/spoke2-rt",
            "location": "westeurope",
            "name": "spoke2-rt",
            "resource_group_name": "hub-nva-az104-rg",
            "route": [
              {
                "address_prefix": "10.1.0.0/16",
                "name": "toSpoke1",
                "next_hop_in_ip_address": "10.0.0.36",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "0.0.0.0/0",
                "name": "default",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              }
            ],
            "subnets": [
              "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-az104-vnet/subnets/mgmt",
              "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-az104-vnet/subnets/workload"
            ],
            "tags": {
              "env": "az104-onprem"
            },
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.hub-nva-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "hub-dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.32/27",
            "address_prefixes": [
              "10.0.0.32/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/az104-hub-vnet/subnets/dmz",
            "name": "dmz",
            "resource_group_name": "hub-vnet-rg",
            "virtual_network_name": "az104-hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_virtual_network.hub-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "hub-gateway-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.255.224/27",
            "address_prefixes": [
              "10.0.255.224/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/az104-hub-vnet/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "resource_group_name": "hub-vnet-rg",
            "virtual_network_name": "az104-hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_virtual_network.hub-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "hub-mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.64/27",
            "address_prefixes": [
              "10.0.0.64/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/az104-hub-vnet/subnets/mgmt",
            "name": "mgmt",
            "resource_group_name": "hub-vnet-rg",
            "virtual_network_name": "az104-hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_virtual_network.hub-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "onprem-gateway-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.255.224/27",
            "address_prefixes": [
              "192.168.255.224/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/virtualNetworks/onprem-vnet/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "resource_group_name": "onprem-vnet-rg",
            "virtual_network_name": "onprem-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.onprem-vnet-rg",
            "azurerm_virtual_network.onprem-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "onprem-mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.1.128/25",
            "address_prefixes": [
              "192.168.1.128/25"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/virtualNetworks/onprem-vnet/subnets/mgmt",
            "name": "mgmt",
            "resource_group_name": "onprem-vnet-rg",
            "virtual_network_name": "onprem-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.onprem-vnet-rg",
            "azurerm_virtual_network.onprem-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "spoke1-mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.0.64/27",
            "address_prefixes": [
              "10.1.0.64/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/mgmt",
            "name": "mgmt",
            "resource_group_name": "spoke1-vnet-rg",
            "virtual_network_name": "spoke1-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.spoke1-vnet-rg",
            "azurerm_virtual_network.spoke1-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "spoke1-workload",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.1.0/24",
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/workload",
            "name": "workload",
            "resource_group_name": "spoke1-vnet-rg",
            "virtual_network_name": "spoke1-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.spoke1-vnet-rg",
            "azurerm_virtual_network.spoke1-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "spoke2-mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.2.0.64/27",
            "address_prefixes": [
              "10.2.0.64/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-az104-vnet/subnets/mgmt",
            "name": "mgmt",
            "resource_group_name": "spoke2-vnet-rg",
            "virtual_network_name": "spoke2-az104-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.spoke2-vnet-rg",
            "azurerm_virtual_network.spoke2-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "spoke2-workload",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.2.1.0/24",
            "address_prefixes": [
              "10.2.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-az104-vnet/subnets/workload",
            "name": "workload",
            "resource_group_name": "spoke2-vnet-rg",
            "virtual_network_name": "spoke2-az104-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.spoke2-vnet-rg",
            "azurerm_virtual_network.spoke2-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "mgmt-nsg-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/virtualNetworks/onprem-vnet/subnets/mgmt",
            "network_security_group_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/networkSecurityGroups/az104-onprem-nsg",
            "subnet_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/virtualNetworks/onprem-vnet/subnets/mgmt"
          },
          "dependencies": [
            "azurerm_network_security_group.onprem-nsg",
            "azurerm_resource_group.onprem-vnet-rg",
            "azurerm_subnet.onprem-mgmt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "hub-gateway-rt-hub-vnet-gateway-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/az104-hub-vnet/subnets/GatewaySubnet",
            "route_table_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/hub-nva-az104-rg/providers/Microsoft.Network/routeTables/hub-gateway-rt",
            "subnet_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/az104-hub-vnet/subnets/GatewaySubnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub-nva-rg",
            "azurerm_route_table.hub-gateway-rt",
            "azurerm_subnet.hub-gateway-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "spoke1-rt-spoke1-vnet-mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/mgmt",
            "route_table_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/hub-nva-az104-rg/providers/Microsoft.Network/routeTables/spoke1-rt",
            "subnet_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/mgmt"
          },
          "dependencies": [
            "azurerm_resource_group.hub-nva-rg",
            "azurerm_route_table.spoke1-rt",
            "azurerm_subnet.spoke1-mgmt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "spoke1-rt-spoke1-vnet-workload",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/workload",
            "route_table_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/hub-nva-az104-rg/providers/Microsoft.Network/routeTables/spoke1-rt",
            "subnet_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/workload"
          },
          "dependencies": [
            "azurerm_resource_group.hub-nva-rg",
            "azurerm_route_table.spoke1-rt",
            "azurerm_subnet.spoke1-workload"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "spoke2-rt-spoke2-vnet-mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-az104-vnet/subnets/mgmt",
            "route_table_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/hub-nva-az104-rg/providers/Microsoft.Network/routeTables/spoke2-rt",
            "subnet_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-az104-vnet/subnets/mgmt"
          },
          "dependencies": [
            "azurerm_resource_group.hub-nva-rg",
            "azurerm_route_table.spoke2-rt",
            "azurerm_subnet.spoke2-mgmt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "spoke2-rt-spoke2-vnet-workload",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-az104-vnet/subnets/workload",
            "route_table_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/hub-nva-az104-rg/providers/Microsoft.Network/routeTables/spoke2-rt",
            "subnet_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-az104-vnet/subnets/workload"
          },
          "dependencies": [
            "azurerm_resource_group.hub-nva-rg",
            "azurerm_route_table.spoke2-rt",
            "azurerm_subnet.spoke2-workload"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "hub-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "69c13559-4a5d-4f27-befc-27d85b49860a",
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/az104-hub-vnet",
            "location": "westeurope",
            "name": "az104-hub-vnet",
            "resource_group_name": "hub-vnet-rg",
            "subnet": [
              {
                "address_prefix": "10.0.0.32/27",
                "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/az104-hub-vnet/subnets/dmz",
                "name": "dmz"
              },
              {
                "address_prefix": "10.0.0.64/27",
                "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/az104-hub-vnet/subnets/mgmt",
                "name": "mgmt"
              },
              {
                "address_prefix": "10.0.255.224/27",
                "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/az104-hub-vnet/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              }
            ],
            "tags": {
              "env": "az104-onprem"
            }
          },
          "dependencies": [
            "azurerm_resource_group.hub-vnet-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "onprem-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/16"
            ],
            "guid": "ddd893e0-508e-4452-ae46-6e539f8d5efd",
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/virtualNetworks/onprem-vnet",
            "location": "northeurope",
            "name": "onprem-vnet",
            "resource_group_name": "onprem-vnet-rg",
            "subnet": [
              {
                "address_prefix": "192.168.1.128/25",
                "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/virtualNetworks/onprem-vnet/subnets/mgmt",
                "name": "mgmt",
                "security_group": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/networkSecurityGroups/az104-onprem-nsg"
              },
              {
                "address_prefix": "192.168.255.224/27",
                "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/virtualNetworks/onprem-vnet/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              }
            ],
            "tags": {
              "env": "az104-onprem"
            }
          },
          "dependencies": [
            "azurerm_resource_group.onprem-vnet-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "spoke1-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "guid": "79e7ecc8-f315-4671-96a0-068eeffde8e2",
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet",
            "location": "westeurope",
            "name": "spoke1-vnet",
            "resource_group_name": "spoke1-vnet-rg",
            "subnet": [
              {
                "address_prefix": "10.1.0.64/27",
                "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/mgmt",
                "name": "mgmt"
              },
              {
                "address_prefix": "10.1.1.0/24",
                "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/workload",
                "name": "workload"
              }
            ],
            "tags": {
              "env": "az104-onprem"
            }
          },
          "dependencies": [
            "azurerm_resource_group.spoke1-vnet-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "spoke2-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "guid": "ea816db8-a7ca-454e-926e-d78f08319fe9",
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-az104-vnet",
            "location": "westeurope",
            "name": "spoke2-az104-vnet",
            "resource_group_name": "spoke2-vnet-rg",
            "subnet": [
              {
                "address_prefix": "10.2.0.64/27",
                "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-az104-vnet/subnets/mgmt",
                "name": "mgmt"
              },
              {
                "address_prefix": "10.2.1.0/24",
                "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-az104-vnet/subnets/workload",
                "name": "workload"
              }
            ],
            "tags": {
              "env": "az104-onprem"
            }
          },
          "dependencies": [
            "azurerm_resource_group.spoke2-vnet-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "hub-vnet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "active_active": false,
            "bgp_settings": [
              {
                "asn": 65515,
                "peer_weight": 0,
                "peering_address": "10.0.255.254"
              }
            ],
            "enable_bgp": false,
            "generation": "Generation1",
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworkGateways/hub-vpn-gateway1",
            "ip_configuration": [
              {
                "name": "vnetGatewayConfig",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/publicIPAddresses/hub-vpn-gateway1-pip",
                "subnet_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/az104-hub-vnet/subnets/GatewaySubnet"
              }
            ],
            "location": "westeurope",
            "name": "hub-vpn-gateway1",
            "resource_group_name": "hub-vnet-rg",
            "sku": "VpnGw1",
            "tags": {
              "env": "az104-onprem"
            },
            "type": "Vpn",
            "vpn_type": "RouteBased"
          },
          "dependencies": [
            "azurerm_public_ip.hub-vpn-gateway1-pip",
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_subnet.hub-gateway-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "onprem-vpn-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "active_active": false,
            "bgp_settings": [
              {
                "asn": 65515,
                "peer_weight": 0,
                "peering_address": "192.168.255.254"
              }
            ],
            "enable_bgp": false,
            "generation": "Generation1",
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/virtualNetworkGateways/onprem-vpn-gateway1",
            "ip_configuration": [
              {
                "name": "vnetGatewayConfig",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/publicIPAddresses/az104-onprem-vpn-gateway1-pip",
                "subnet_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/virtualNetworks/onprem-vnet/subnets/GatewaySubnet"
              }
            ],
            "location": "northeurope",
            "name": "onprem-vpn-gateway1",
            "resource_group_name": "onprem-vnet-rg",
            "sku": "VpnGw1",
            "tags": {
              "env": "az104-onprem"
            },
            "type": "Vpn",
            "vpn_type": "RouteBased"
          },
          "dependencies": [
            "azurerm_public_ip.onprem-vpn-gateway1-pip",
            "azurerm_resource_group.onprem-vnet-rg",
            "azurerm_subnet.onprem-gateway-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway_connection",
      "name": "hub-onprem-conn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connection_protocol": "IKEv2",
            "enable_bgp": false,
            "express_route_gateway_bypass": false,
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/connections/hub-onprem-conn",
            "location": "westeurope",
            "name": "hub-onprem-conn",
            "peer_virtual_network_gateway_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/virtualNetworkGateways/onprem-vpn-gateway1",
            "resource_group_name": "hub-vnet-rg",
            "routing_weight": 1,
            "shared_key": "4-v3ry-53cr37-1p53c-5h4r3d-k3y",
            "tags": {
              "env": "az104-onprem"
            },
            "type": "Vnet2Vnet",
            "use_policy_based_traffic_selectors": false,
            "virtual_network_gateway_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworkGateways/hub-vpn-gateway1"
          },
          "dependencies": [
            "azurerm_public_ip.hub-vpn-gateway1-pip",
            "azurerm_public_ip.onprem-vpn-gateway1-pip",
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_resource_group.onprem-vnet-rg",
            "azurerm_subnet.hub-gateway-subnet",
            "azurerm_subnet.onprem-gateway-subnet",
            "azurerm_virtual_network_gateway.hub-vnet-gateway",
            "azurerm_virtual_network_gateway.onprem-vpn-gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway_connection",
      "name": "onprem-hub-conn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connection_protocol": "IKEv2",
            "enable_bgp": false,
            "express_route_gateway_bypass": false,
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/connections/onprem-hub-conn",
            "location": "northeurope",
            "name": "onprem-hub-conn",
            "peer_virtual_network_gateway_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworkGateways/hub-vpn-gateway1",
            "resource_group_name": "onprem-vnet-rg",
            "routing_weight": 1,
            "shared_key": "4-v3ry-53cr37-1p53c-5h4r3d-k3y",
            "tags": {
              "env": "az104-onprem"
            },
            "type": "Vnet2Vnet",
            "use_policy_based_traffic_selectors": false,
            "virtual_network_gateway_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/virtualNetworkGateways/onprem-vpn-gateway1"
          },
          "dependencies": [
            "azurerm_public_ip.hub-vpn-gateway1-pip",
            "azurerm_public_ip.onprem-vpn-gateway1-pip",
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_resource_group.onprem-vnet-rg",
            "azurerm_subnet.hub-gateway-subnet",
            "azurerm_subnet.onprem-gateway-subnet",
            "azurerm_virtual_network_gateway.hub-vnet-gateway",
            "azurerm_virtual_network_gateway.onprem-vpn-gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "hub-spoke1-peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": true,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/az104-hub-vnet/virtualNetworkPeerings/hub-spoke1-peer",
            "name": "hub-spoke1-peer",
            "remote_virtual_network_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet",
            "resource_group_name": "hub-vnet-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "az104-hub-vnet"
          },
          "dependencies": [
            "azurerm_public_ip.hub-vpn-gateway1-pip",
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_resource_group.spoke1-vnet-rg",
            "azurerm_subnet.hub-gateway-subnet",
            "azurerm_virtual_network.hub-vnet",
            "azurerm_virtual_network.spoke1-vnet",
            "azurerm_virtual_network_gateway.hub-vnet-gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "hub-spoke2-peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": true,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/az104-hub-vnet/virtualNetworkPeerings/hub-spoke2-peer",
            "name": "hub-spoke2-peer",
            "remote_virtual_network_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-az104-vnet",
            "resource_group_name": "hub-vnet-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "az104-hub-vnet"
          },
          "dependencies": [
            "azurerm_public_ip.hub-vpn-gateway1-pip",
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_resource_group.spoke2-vnet-rg",
            "azurerm_subnet.hub-gateway-subnet",
            "azurerm_virtual_network.hub-vnet",
            "azurerm_virtual_network.spoke2-vnet",
            "azurerm_virtual_network_gateway.hub-vnet-gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "spoke1-hub-peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/virtualNetworkPeerings/spoke1-hub-peer",
            "name": "spoke1-hub-peer",
            "remote_virtual_network_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/az104-hub-vnet",
            "resource_group_name": "spoke1-vnet-rg",
            "use_remote_gateways": true,
            "virtual_network_name": "spoke1-vnet"
          },
          "dependencies": [
            "azurerm_public_ip.hub-vpn-gateway1-pip",
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_resource_group.spoke1-vnet-rg",
            "azurerm_subnet.hub-gateway-subnet",
            "azurerm_virtual_network.hub-vnet",
            "azurerm_virtual_network.spoke1-vnet",
            "azurerm_virtual_network_gateway.hub-vnet-gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "spoke2-hub-peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-az104-vnet/virtualNetworkPeerings/spoke2-az104-hub-peer",
            "name": "spoke2-az104-hub-peer",
            "remote_virtual_network_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/az104-hub-vnet",
            "resource_group_name": "spoke2-vnet-rg",
            "use_remote_gateways": true,
            "virtual_network_name": "spoke2-az104-vnet"
          },
          "dependencies": [
            "azurerm_public_ip.hub-vpn-gateway1-pip",
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_resource_group.spoke2-vnet-rg",
            "azurerm_subnet.hub-gateway-subnet",
            "azurerm_virtual_network.hub-vnet",
            "azurerm_virtual_network.spoke2-vnet",
            "azurerm_virtual_network_gateway.hub-vnet-gateway"
          ]
        }
      ]
    }
  ]
}